--- a/flutter_2/pubspec.yaml
+++ b/flutter_2/pubspec.yaml
@@ -69,6 +69,26 @@ flutter:
     - assets/images/lotion3.jpg
     - assets/images/lotion4.jpg
     - assets/images/lotion5.jpg
+    - assets/images/mask1.jpg
+    - assets/images/mask2.jpg
+    - assets/images/mask3.jpg
+    - assets/images/mask4.jpg
+    - assets/images/mask5.jpg
+    - assets/images/waterCream1.jpg
+    - assets/images/waterCream2.jpg
+    - assets/images/waterCream3.jpg
+    - assets/images/waterCream4.jpg
+    - assets/images/waterCream5.jpg
+    - assets/images/essense1.jpg
+    - assets/images/essense2.jpg
+    - assets/images/essense3.jpg
+    - assets/images/essense4.jpg
+    - assets/images/essense5.jpg
+    - assets/images/shaving1.jpg
+    - assets/images/shaving2.jpg
+    - assets/images/shaving3.jpg
+    - assets/images/shaving4.jpg
+    - assets/images/shaving5.jpg
 
     # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
