--- a/flutter_2/pubspec.yaml
+++ b/flutter_2/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_app_check: ^0.1.4+1
 
 dev_dependencies:
   flutter_test:
@@ -89,6 +90,7 @@ flutter:
     - assets/images/shaving3.jpg
     - assets/images/shaving4.jpg
     - assets/images/shaving5.jpg
+    - assets/images/profile.png
 
     # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
