--- a/flutter_2/pubspec.yaml
+++ b/flutter_2/pubspec.yaml
@@ -35,9 +35,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_app_check: ^0.1.4+1
-  firebase_core: ^2.13.0
+  # firebase_core: ^2.13.0
   # cloud_firestore: ^4.7.1
   firebase_auth: ^4.6.1
+  cloud_firestore: ^4.8.0
+  firebase_core: ^2.13.1
+  flutter_provider: ^2.1.0
+  provider: ^6.0.5
+  # cloud_firestore: ^4.8.0
 
 dev_dependencies:
   flutter_test:
