--- a/flutter_2/pubspec.yaml
+++ b/flutter_2/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/logo.png
+    - assets/images/star.png
     - assets/images/skin1.jpg
     - assets/images/skin2.jpg
     - assets/images/skin3.jpg
